Dark mode fix attempt 5

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -10,11 +10,35 @@
     border: 2px solid yellow;
     padding: 8px;
     border-radius: 10%;
+    margin: 6px 0px;
   }
   .btn-outline-warning {
     border: 3px solid;
     margin: 5px;
     color: orange;
+  }
+}
+
+[data-theme="light"] {
+  .btn-outline-warning {
+    border: 3px solid;
+    margin: 5px;
+    color: black;
+  }
+
+  h4 {
+    color: #black;
+  }
+
+  .items {
+    border: 2px solid black;
+    padding: 8px;
+    border-radius: 10%;
+    margin: 6px 0px;
+  }
+
+  .btn-outline-warning:hover {
+    color: black;
   }
 }
 
@@ -28,20 +52,25 @@
   margin: 5px;
 }
 
-.btn-outline-warning {
-  border: 3px solid;
-  margin: 5px;
-  color: black;
+#map {
+  width: 100%;
+  height: 400px;
+  background-color: grey;
 }
 
 #message {
   height: 20px;
 }
 
+.btn-outline-warning {
+  border: 3px solid;
+  margin: 5px;
+  color: black;
+}
+
 h4 {
   color: #black;
 }
-
 
 .items {
   border: 2px solid black;
@@ -52,10 +81,4 @@ h4 {
 
 .btn-outline-warning:hover {
   color: black;
-}
-
-#map {
-  width: 100%;
-  height: 400px;
-  background-color: grey;
 }
